# finary

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  publish.yaml
src/: auth.rs  constants.rs  error.rs  finary.rs  lib.rs  sign_in.rs  structs.rs
