[package]
name = "finary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = "1.0.139"
serde_json = "1.0.82"
tokio = { version = "1", features = ["full"] }
