[package]
name = "finary"
version = "0.1.0"
edition = "2021"
description = "Rust Finary API Client"
authors = ["DevChris <yovano_c@outlook.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/yovanoc/finary/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = "1.0.139"
serde_json = "1.0.82"
tokio = { version = "1", features = ["full"] }
